# TalentStageX

./: README.md
backend/: docker-compose.yml  pyproject.toml
backend/scripts/: seed.py
backend/src/: auth_utils.py  db.py  db_models.py  main.py  schemas.py
backend/src/routers/: auth.py  profile.py  projects.py
backend/src/utils/: profile.py
client/src/app/: layout.tsx  page.tsx
client/src/app/auth/login/: page.tsx
client/src/app/auth/signup/: page.tsx
client/src/app/dashboard/: page.tsx
client/src/app/post-project/: page.tsx
client/src/app/profile/: page.tsx
client/src/app/projects/: page.tsx
client/src/components/: Sidebar.tsx  SidebarClient.tsx
client/src/context/: AuthContext.tsx
client/src/lib/: types.ts
