[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.1.3",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
